[gd_scene load_steps=7 format=3 uid="uid://d277cjb25ecu5"]

[ext_resource type="FontFile" uid="uid://ygvmsmppelgp" path="res://assets/fonts/PixeloidSans-JR6qo.ttf" id="1_f6eet"]
[ext_resource type="Script" path="res://ui/GameUI/Tooltip/AbilityTooltip.gd" id="2_bqeaq"]
[ext_resource type="Texture2D" uid="uid://c5t1h65r8sqdn" path="res://assets/ui/tooltip/background.png" id="3_1v1qr"]
[ext_resource type="LabelSettings" uid="uid://bb1nybbc51atq" path="res://ui/Dialog/DialogLabelSettings.tres" id="4_iijj5"]

[sub_resource type="Theme" id="Theme_b38k5"]
default_font = ExtResource("1_f6eet")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oh3s5"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 6.0
content_margin_bottom = 4.0

[node name="AbilityTooltip" type="PanelContainer"]
z_index = 5
offset_left = 215.0
offset_top = 121.0
offset_right = 500.0
offset_bottom = 226.0
mouse_filter = 2
theme = SubResource("Theme_b38k5")
script = ExtResource("2_bqeaq")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
mouse_filter = 1
texture = ExtResource("3_1v1qr")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_oh3s5")

[node name="Content" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TopLine" type="BoxContainer" parent="PanelContainer/Content"]
layout_mode = 2

[node name="AbilityName" type="VBoxContainer" parent="PanelContainer/Content/TopLine"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Content/TopLine/AbilityName"]
layout_mode = 2
text = "<AbilityName>"
label_settings = ExtResource("4_iijj5")

[node name="SpellSchool" type="VBoxContainer" parent="PanelContainer/Content/TopLine"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/Content/TopLine/SpellSchool"]
layout_mode = 2
text = "<SpellSchool>"
label_settings = ExtResource("4_iijj5")
horizontal_alignment = 2

[node name="Resource" type="HBoxContainer" parent="PanelContainer/Content"]
layout_mode = 2

[node name="ResourceCost" type="VBoxContainer" parent="PanelContainer/Content/Resource"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Content/Resource/ResourceCost"]
layout_mode = 2
text = "<ResourceAmount>"
label_settings = ExtResource("4_iijj5")

[node name="ResourceUnit" type="VBoxContainer" parent="PanelContainer/Content/Resource"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Content/Resource/ResourceUnit"]
layout_mode = 2
text = "<AbilityCost>"
label_settings = ExtResource("4_iijj5")

[node name="Description" type="MarginContainer" parent="PanelContainer/Content"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Text" type="VBoxContainer" parent="PanelContainer/Content/Description"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Content/Description/Text"]
layout_mode = 2
text = "<AbilityDescription>"
label_settings = ExtResource("4_iijj5")
